# rp2040-kbd

./: Cargo.toml  Jank.md  Readme.md  Todo.md  build.sh  build_all.sh  deny.toml  lint_all.sh  rust-toolchain.toml
.cargo/: config  config.toml
.local/: lint.sh  mac-deploy.sh
rp2040-kbd/: Cargo.toml
rp2040-kbd-lib/: Cargo.toml
rp2040-kbd-lib/src/: keycodes.rs  lib.rs  matrix.rs  queue.rs  ring_buffer.rs
rp2040-kbd/src/: debugger.rs  hid.rs  keyboard.rs  keymap.rs  lock.rs  main.rs  runtime.rs  timer.rs
rp2040-kbd/src/hid/: keycodes.rs  transform.rs  usb_hiddev.rs
rp2040-kbd/src/keyboard/: debounce.rs  jitter.rs  left.rs  oled.rs  power_led.rs  right.rs  split_serial.rs  sync.rs  uart_serial.rs  usb_serial.rs
rp2040-kbd/src/keyboard/left/: message_receiver.rs
rp2040-kbd/src/keyboard/oled/: left.rs  right.rs  section.rs
rp2040-kbd/src/keyboard/right/: message_serializer.rs
rp2040-kbd/src/keymap/: mapping.rs
rp2040-kbd/src/runtime/: left.rs  locks.rs  right.rs  shared.rs
rp2040-kbd/src/runtime/left/: shared.rs
rp2040-kbd/src/runtime/right/: shared.rs
rp2040-kbd/src/runtime/right/shared/: usb_serial.rs
rp2040-kbd/src/runtime/shared/: cores_left.rs  cores_right.rs  loop_counter.rs  press_latency_counter.rs  ring_buffer.rs  sleep.rs  usb.rs
usb-tester/: Cargo.toml
usb-tester/src/: main.rs
