[workspace]
resolver = "2"
members = [ "rp2040-kbd", "rp2040-kbd-lib"]

[workspace.dependencies]
rp2040-kbd-lib = { path = "rp2040-kbd-lib" }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
heapless = "0.8.0"
paste = "1.0.14"
pio-uart = { git = "https://github.com/MarcusGrass/pio-uart", rev = "1c100eb4b5db2c49ed0cae94f5e338d267918695" }
liatris = { git = "https://github.com/MarcusGrass/rp-hal-boards", rev = "b587acaff463b7de6fa9d8c35c3db49fca26d263" }
rp2040-hal = "0.10.0"
ssd1306 = "0.8.4"
usb-device = { version = "0.3.2", default-features = false}
usbd-hid = "0.7.0"
usbd-serial = "0.2.1"

[workspace.lints]
clippy.pedantic = { level = "warn", priority = -1 }

clippy.inline_always = "allow"
# clippy.allow_attributes = "warn"
clippy.match_same_arms = "allow"
clippy.module_name_repetitions = "allow"
clippy.new_without_default = "allow"
clippy.similar_names = "allow"
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.unnested_or_patterns = "allow"

[patch.crates-io]
usb-device = { git = "https://github.com/MarcusGrass/usb-device", rev = "780fa48a8a6cbed88e0456d744651b5983d212bd" }