[workspace]
resolver = "2"
members = [ "rp2040-kbd", "rp2040-kbd-lib"]

[workspace.dependencies]
rp2040-kbd-lib = { path = "rp2040-kbd-lib" }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
heapless = "0.8.0"
paste = "1.0.15"
pio-uart = { git = "https://github.com/MarcusGrass/pio-uart", rev = "80f5fdbdbfb56e456ece97bdb7c8aebe18d10042" }
liatris = { git = "https://github.com/MarcusGrass/rp-hal-boards", rev = "748c497ce5f423599e168ca17d2f8017533c0afb" }
rp2040-hal = "0.11.0"
ssd1306 = "0.10.0"
usb-device = { version = "0.3.2", default-features = false}
usbd-hid = "0.8.2"
usbd-serial = "0.2.2"

[workspace.lints]
clippy.pedantic = { level = "warn", priority = -1 }

clippy.inline_always = "allow"
clippy.allow_attributes = "warn"
clippy.match_same_arms = "allow"
clippy.module_name_repetitions = "allow"
clippy.new_without_default = "allow"
clippy.similar_names = "allow"
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.unnested_or_patterns = "allow"

[patch.crates-io]
usb-device = { git = "https://github.com/MarcusGrass/usb-device", rev = "b0b066059065db55fc9991f18f5de755f1accd7f" }
rp2040-hal = { git = "https://github.com/MarcusGrass/rp-hal", rev = "79e022ddc15377c155682db15138b623212b978d"}
