[package]
name = "rp2040-kbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-kbd-lib = {workspace = true}
bitvec = {workspace = true, default-features = false}
cortex-m-rt = { workspace = true }
critical-section.workspace = true
embedded-hal.workspace = true
embedded-graphics.workspace = true
embedded-io.workspace = true
rp2040-boot2 = { workspace = true }
rp2040-hal = {workspace = true, features = ["rt", "rp2040-e5", "rom-func-cache", "critical-section-impl"]}
nb.workspace = true
liatris.workspace = true
heapless.workspace = true
usb-device.workspace = true
usbd-hid.workspace = true
usbd-serial.workspace = true
panic-halt.workspace = true
paste = { workspace = true }
pio-uart = {workspace = true}
ssd1306.workspace = true
rotary-encoder-embedded.workspace = true
rustc-hash = { workspace = true }

[dev-dependencies]
cortex-m.workspace = true
cortex-m-rtic.workspace = true
embedded-sdmmc.workspace = true
hd44780-driver.workspace = true
heapless.workspace = true
pio.workspace = true
pio-proc.workspace = true
rp2040-hal = { workspace = true, features = [ "defmt" ] }
smart-leds.workspace = true
usbd-hid.workspace = true
ws2812-pio.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

[features]
# This is the set of features we enable by default
default = []

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]

serial = []

right = []

left = []

hiddev = []